Fix typo in application.properties for retrieval

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://bd1.cv13ltcs0ucl.us-east-1.rds.amazonaws.com:3306/db_vehiculos?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrival=true
+spring.datasource.url=jdbc:mysql://bd1.cv13ltcs0ucl.us-east-1.rds.amazonaws.com:3306/db_vehiculos?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=admin
 spring.datasource.password=basedatos123
 spring.jpa.hibernate.ddl-auto=update
 springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
