--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,9 @@ spring.datasource.url=jdbc:mysql://bd1.cv13ltcs0ucl.us-east-1.rds.amazonaws.com:
 spring.datasource.username=admin
 spring.datasource.password=basedatos123
 spring.jpa.hibernate.ddl-auto=update
+
+# Fuerza a Swagger a exponerse en estas rutas
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+# Esta línea es vital si tu app tiene controladores en paquetes específicos
+springdoc.packages-to-scan=com.example.demo
