Update Swagger package scanning path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 # Esta línea es vital si tu app tiene controladores en paquetes específicos
-springdoc.packages-to-scan=com.example.demo
+springdoc.packages-to-scan=com.vehiculos.VehiculosRest.controllers
